--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,11 @@ anyhow = "1.0.58"
 cfg-if = "1.0.0"
 id3 = "1.2.0"
 mp4ameta = "0.11.0"
+once_cell = "1.12.0"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 core-foundation = "0.9.3"
 core-foundation-sys = "0.8.3"
+
+[target."cfg(target_os = \"windows\")".dependencies]
+windows = { version = "0.37.0", features = ["alloc", "Win32_Media_MediaFoundation"] }
