--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ core-foundation-sys = "0.8.3"
 
 [target."cfg(target_os = \"windows\")".dependencies]
 windows = { version = "0.37.0", features = ["alloc", "Win32_Media_MediaFoundation"] }
+
+[target."cfg(unix)".dependencies]
+libc = "0.2.126"
