--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.58"
 cfg-if = "1.0.0"
+clap = { version = "3.2.6", features = ["derive"] }
+crossbeam-channel = "0.5.5"
 id3 = "1.2.0"
 mp4ameta = "0.11.0"
 once_cell = "1.12.0"
