--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ anyhow = "1.0.58"
 cfg-if = "1.0.0"
 clap = { version = "3.2.6", features = ["derive"] }
 crossbeam-channel = "0.5.5"
+env_logger = "0.9.0"
 id3 = "1.2.0"
+log = "0.4.17"
 mp4ameta = "0.11.0"
 once_cell = "1.12.0"
 
