--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,22 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.58"
+anyhow = "1.0.72"
 cfg-if = "1.0.0"
-clap = { version = "3.2.6", features = ["derive"] }
-crossbeam-channel = "0.5.5"
-env_logger = "0.9.0"
-id3 = "1.2.0"
-log = "0.4.17"
+clap = { version = "4.3.19", features = ["derive"] }
+crossbeam-channel = "0.5.8"
+env_logger = "0.10.0"
+id3 = "1.7.0"
+log = "0.4.19"
 mp4ameta = "0.11.0"
-once_cell = "1.12.0"
+once_cell = "1.18.0"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 core-foundation = "0.9.3"
-core-foundation-sys = "0.8.3"
+core-foundation-sys = "0.8.4"
 
 [target."cfg(target_os = \"windows\")".dependencies]
-windows = { version = "0.37.0", features = ["alloc", "Win32_Media_MediaFoundation"] }
+windows = { version = "0.48.0", features = ["Win32_Media_MediaFoundation"] }
 
 [target."cfg(unix)".dependencies]
-libc = "0.2.126"
+libc = "0.2.147"
